src/objects/Apttus_Config2__Order__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The order description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The order description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>