src/objects/Apttus_Config2__Order__c/fields/Apttus_Config2__OriginalOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OriginalOrderNumber__c</fullName>
    <description>The order number of the associated original order</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The order number of the associated original order</inlineHelpText>
    <label>Original Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>