src/objects/Apttus_Config2__Order__c/fields/Aspire_InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>Aspire_InvoiceId__c</fullName>
    <label>Aspire_InvoiceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>