src/objects/Apttus_Config2__Order__c/fields/AspireInvoice_Created__c.field-meta.xml
<CustomField>
    <fullName>AspireInvoice_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AspireInvoice Created</label>
    <type>Checkbox</type>
</CustomField>