src/objects/Apttus_Config2__Order__c/fields/Count_of_License_Status_Yes__c.field-meta.xml
<CustomField>
    <fullName>Count_of_License_Status_Yes__c</fullName>
    <label>Count of License Status Yes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>