src/objects/Apttus_Config2__Order__c/fields/Generic_xref_BillTo__c.field-meta.xml
<CustomField>
    <fullName>Generic_xref_BillTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic/xref BillTo?</label>
    <type>Checkbox</type>
</CustomField>