src/objects/Apttus_Config2__Order__c/fields/Generic_xref_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>Generic_xref_ShipTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic/xref ShipTo?</label>
    <type>Checkbox</type>
</CustomField>