src/objects/Apttus_Config2__Order__c/fields/Generic_xref_SoldTo__c.field-meta.xml
<CustomField>
    <fullName>Generic_xref_SoldTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic/xref SoldTo?</label>
    <type>Checkbox</type>
</CustomField>