src/objects/Apttus_Config2__Order__c/fields/Honeywell_ID__c.field-meta.xml
<CustomField>
    <fullName>Honeywell_ID__c</fullName>
    <label>Honeywell ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>