src/objects/Apttus_Config2__Order__c/fields/Licence_Key_Linked__c.field-meta.xml
<CustomField>
    <fullName>Licence_Key_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System will Checked and send email --if all Order line items Option(product) have Is License Required and CPQPlatforms License Status is Activation Key-Linked</description>
    <label>Licence Key Linked</label>
    <type>Checkbox</type>
</CustomField>