src/objects/Apttus_Config2__Order__c/fields/NGBSS_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>NGBSS_Processing_Status__c</fullName>
    <label>NGBSS Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Error</fullName>
            </value>
            <value>
                <fullName>Order Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>