src/objects/Apttus_Config2__Order__c/fields/SoldTo_Number__c.field-meta.xml
<CustomField>
    <fullName>SoldTo_Number__c</fullName>
    <label>SoldTo_Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>