src/objects/Apttus_Config2__Order__c/fields/soldToNumber__c.field-meta.xml
<CustomField>
    <fullName>soldToNumber__c</fullName>
    <formula>IF(
(ISBLANK(SoldTo_Number__c ) || ISNULL(SoldTo_Number__c) ),
 
IF( 
(ISBLANK(SoldToXref__c ) || ISNULL(SoldToXref__c ) ),

Apttus_Config2__SoldToAccountId__r.SAP_Sold_To__c ,
SoldToXref__r.External_Account_ID__c),

SoldTo_Number__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoldTo Number</label>
    <type>Text</type>
</CustomField>